[package]
name = "bevy_schedules_ext"
version = "0.14.0-dev"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vonforum/bevy_schedules_ext"
description = "A Bevy plugin for expanding the use of schedules."
keywords = ["bevy", "schedules", "plugin", "ecs"]
categories = ["game-development", "game-engines"]
readme = "README.md"

[features]
default = ["app_ext", "nesting_containers", "states"]
app_ext = ["dep:bevy_app"]
containers = ["dep:bevy_utils"]
nesting = []
nesting_containers = ["containers", "nesting"]
states = []

[dependencies]
bevy_app = { git = "https://github.com/bevyengine/bevy.git", default-features = false, optional = true }
bevy_ecs = { git = "https://github.com/bevyengine/bevy.git", default-features = false }
bevy_utils = { git = "https://github.com/bevyengine/bevy.git", default-features = false, optional = true }

[[example]]
name = "nested_schedules"
path = "examples/nested_schedules.rs"
required-features = ["nesting", "app_ext"]
