[package]
name = "bevy_schedules_ext"
version = "0.15.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vonforum/bevy_schedules_ext"
description = "A Bevy plugin for expanding the use of schedules."
keywords = ["bevy", "schedules", "plugin", "ecs"]
categories = ["game-development", "game-engines"]
readme = "README.md"

[features]
default = ["app_ext", "nesting", "states"]
app_ext = ["dep:bevy_app", "bevy_state?/bevy_app"]
containers = ["dep:bevy_utils"]
nesting = ["containers", "dep:bevy_utils"]
states = ["dep:bevy_state"]

[dependencies]
bevy_app = { version = "0.15", default-features = false, optional = true }
bevy_ecs = { version = "0.15", default-features = false }
bevy_utils = { version = "0.15", default-features = false, optional = true }
bevy_state = { version = "0.15", default-features = false, optional = true }

[[example]]
name = "nested_schedules"
path = "examples/nested_schedules.rs"
required-features = ["nesting", "app_ext"]

[[example]]
name = "states"
path = "examples/states.rs"
required-features = ["states", "app_ext"]
